GBA Audio: Allow GBAAVStream to have no video callback

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Misc:
  - SDL: Support fullscreen in SDL 1.2
  - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
  - GBA: Better memory handling with PNG savestates
+ - GBA Audio: Allow GBAAVStream to have no video callback
 
 0.3.0: (2015-08-16)
 Features:
