Libretro: Fix a memory leak with the render buffer

--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Bugfixes:
  - GBA Video: Start on the scanline BIOS finishes on if no BIOS is loaded
  - GBA: Deinit savegame when unloading a ROM
  - GBA: Fix BIOS check on big endian
+ - Libretro: Fix a memory leak with the render buffer
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
