--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Bugfixes:
  - GBA: Deinit savegame when unloading a ROM
  - GBA: Fix BIOS check on big endian
  - Libretro: Fix a memory leak with the render buffer
+ - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
