--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Misc:
  - GBA: Better memory handling with PNG savestates
  - GBA Audio: Allow GBAAVStream to have no video callback
  - ARM7: Force disable LTO on two files to work around a GCC bug
+ - Qt: Prevent savestate window from opening while in multiplayer
 
 0.3.0: (2015-08-16)
 Features:
