--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Misc:
  - Libretro: Use anonymous memory mappers for large blocks of memory
  - Qt: Add 'Apply' button to settings window
  - Qt: Prevent savestate window from opening while in multiplayer
+ - Qt: Disable menu items in multiplayer that don't make sense to have enabled
 
 0.3.0: (2015-08-16)
 Features:
