--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Bugfixes:
  - Libretro: Fix a memory leak with the render buffer
  - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
  - GBA Audio: Fix audio channels being silenced at the wrong time
+ - VFS: Fix return values of VFileFILE.read and .write
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
