--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Bugfixes:
  - Libretro: Fix a memory leak with the render buffer
  - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
  - GBA Audio: Fix audio channels being silenced at the wrong time
+ - VFS: Fix return values of VFileFILE.read and .write
 Misc:
  - Qt: Remove useless help icons in dialogs
  - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
