--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@ Misc:
  - ARM7: Force disable LTO on two files to work around a GCC bug
  - Qt: Prevent savestate window from opening while in multiplayer
  - Qt: Disable menu items in multiplayer that don't make sense to have enabled
+ - Qt: Dropping multiplayer windows works more cleanly now
 
 0.3.0: (2015-08-16)
 Features:
