GBA Video: Fix edge case with sprite blend modes and semitransparency

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Bugfixes:
  - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
  - GBA Audio: Fix audio channels being silenced at the wrong time
  - VFS: Fix return values of VFileFILE.read and .write
+ - GBA Video: Fix edge case with sprite blend modes and semitransparency
 Misc:
  - Qt: Remove useless help icons in dialogs
  - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
