--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Bugfixes:
  - GBA Audio: Fix audio channels being silenced at the wrong time
  - VFS: Fix return values of VFileFILE.read and .write
  - Util: Fix PowerPC PNG read/write pixel order
+ - GBA Video: Fix edge case with sprite blend modes and semitransparency
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
