--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - GBA Video: Fix edge case with sprite blend modes and semitransparency
  - GBA Video: Fix objwin and blending interaction on sprites
+ - GBA Video: Fix OBJ semitransparency improperly interacting with other blending ops
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
