--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ Bugfixes:
  - GBA Video: Fix edge case with sprite blend modes and semitransparency
  - GBA Video: Fix objwin and blending interaction on sprites
  - GBA Video: Fix OBJ semitransparency improperly interacting with other blending ops
+ - GBA: Fix autodetect problems with some bad dumps of Super Mario Advance 2
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
