--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Misc:
  - Qt: Dropping multiplayer windows works more cleanly now
  - GBA BIOS: Implement RegisterRamReset for SIO registers
  - GBA: Additional savestate sanity checks
+ - GBA: Check for cycle count being too high
 
 0.3.0: (2015-08-16)
 Features:
