--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@ Misc:
  - GBA Config: Add "override" layer for better one-time configuration
  - SDL: Allow GBASDLAudio to be used without a thread context
  - All: Improved PowerPC support
+ - All: Add --version flag
 
 0.3.0: (2015-08-16)
 Features:
