GBA Memory: Fix DMAs from BIOS while not in BIOS
DMAs appear to have special protections against reading from the BIOS, causing
BIOS reads to be entirely zero. This behavior needs confirmation on hardware,
but seems to make sense.

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Features:
 Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - Qt: Use safer isLoaded check in GameController
+ - GBA Memory: Fix DMAs from BIOS while not in BIOS
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
