--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - Qt: Use safer isLoaded check in GameController
  - GBA Memory: Fix DMAs from BIOS while not in BIOS
+ - GBA: Fix idle skip state being retained between games
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
