--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Features:
  - Officially supported ports for the Nintendo 3DS, Wii, and PlayStation Vita
  - I/O viewer
  - Booting of multiboot images
+ - Customization of GIF recording
 Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - Qt: Use safer isLoaded check in GameController
