Qt: Fix a race condition in PainterGL that could lead to a crash

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 Bugfixes:
  - Qt: Use safer isLoaded check in GameController
  - GBA: Fix idle skip state being retained between games
+ - Qt: Fix a race condition in PainterGL that could lead to a crash
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
