--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - Qt: Use safer isLoaded check in GameController
  - GBA Memory: Fix DMAs from BIOS while not in BIOS
  - GBA: Fix idle skip state being retained between games
+ - Qt: Fix a race condition in PainterGL that could lead to a crash
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
