--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Bugfixes:
  - Qt: Use safer isLoaded check in GameController
  - GBA: Fix idle skip state being retained between games
  - Qt: Fix a race condition in PainterGL that could lead to a crash
+ - Qt: Fix clear button/analog buttons in gamepad mapper on some platforms
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
