--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Bugfixes:
  - GBA Memory: Fix DMAs from BIOS while not in BIOS
  - GBA: Fix idle skip state being retained between games
  - Qt: Fix a race condition in PainterGL that could lead to a crash
+ - Qt: Fix clear button/analog buttons in gamepad mapper on some platforms
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
