Qt: Fix a crash in the memory viewer

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Bugfixes:
  - Qt: Fix clear button/analog buttons in gamepad mapper on some platforms
  - GBA Video: Fix _mix for 15-bit color
  - Qt: Fix font size in memory viewer
+ - Qt: Fix a crash in the memory viewer
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
