--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Bugfixes:
  - VFS: Fix VFileReadline and remove _vfdReadline
  - Qt: Fix font size in memory viewer
  - GBA Memory: Fix DMA register writing behavior
+ - Qt: Fix a crash in the memory viewer
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
