--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - GBA Memory: Fix DMA register writing behavior
  - Qt: Fix a crash in the memory viewer
  - GBA BIOS: Fix misaligned CpuSet
+ - Libretro: Fix problems with rumble not turning off
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
