--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Bugfixes:
  - GBA Video: Fix _mix for 15-bit color
  - Qt: Fix font size in memory viewer
  - Qt: Fix a crash in the memory viewer
+ - Libretro: Fix problems with rumble not turning off
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
