--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Bugfixes:
  - Qt: Fix font size in memory viewer
  - Qt: Fix a crash in the memory viewer
  - Libretro: Fix problems with rumble not turning off
+ - GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
