GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Bugfixes:
  - GBA BIOS: Fix misaligned CpuSet
  - Libretro: Fix problems with rumble not turning off
  - ARM7: Fix sign of unaligned LDRSH
+ - GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
