--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Misc:
  - All: Fix some undefined behavior warnings
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
  - Util: Use VFile for configuration
+ - GBA Memory: Implement several unimplemented memory access types
 
 0.3.1: (2015-10-24)
 Bugfixes:
