GBA Memory: Fix Store8 to OBJ VRAM

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Bugfixes:
  - ARM7: Fix sign of unaligned LDRSH
  - GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses
  - GBA Memory: Fix DMA behavior for SRAM accesses
+ - GBA Memory: Fix Store8 to OBJ VRAM
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
