GBA: Initialize uninitialized pristineRom and pristineRomSize members

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Bugfixes:
  - GBA Memory: Fix DMA behavior for SRAM accesses
  - GBA Memory: Fix Store8 to OBJ VRAM
  - GBA Memory: Fix alignment of LDM/STM on SRAM
+ - GBA: Initialize uninitialized pristineRom and pristineRomSize members
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
