--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Bugfixes:
  - GBA Memory: Fix Store8 to OBJ VRAM
  - GBA Memory: Fix alignment of LDM/STM on SRAM
  - GBA: Initialize uninitialized pristineRom and pristineRomSize members
+ - GBA Memory: Fix unaligned out-of-bounds ROM loads
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
