GBA Memory: Fix unaligned out-of-bounds ROM loads

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Bugfixes:
  - GBA Memory: Fix Store8 to OBJ VRAM
  - GBA Memory: Fix alignment of LDM/STM on SRAM
  - GBA: Initialize uninitialized pristineRom and pristineRomSize members
+ - GBA Memory: Fix unaligned out-of-bounds ROM loads
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
