GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ Bugfixes:
  - GBA Memory: Fix unaligned out-of-bounds ROM loads
  - GBA: Fix warnings when creating and loading savestates
  - Qt: Add additional checks in CheatModel to prevent crashes
+ - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
