--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - GBA Memory: Fix unaligned out-of-bounds ROM loads
  - Qt: Add additional checks in CheatModel to prevent crashes
  - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
+ - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
