--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Bugfixes:
  - Qt: Add additional checks in CheatModel to prevent crashes
  - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
  - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
+ - GBA BIOS: Fix Sqrt sign
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
