GBA BIOS: Fix Sqrt sign

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Bugfixes:
  - Qt: Add additional checks in CheatModel to prevent crashes
  - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
  - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
+ - GBA BIOS: Fix Sqrt sign
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
