--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ Bugfixes:
  - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
  - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
  - GBA BIOS: Fix Sqrt sign
+ - GBA BIOS: Fix misaligned RLUnCompReadNormalWrite*
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
