--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Bugfixes:
  - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
  - GBA BIOS: Fix Sqrt sign
  - GBA BIOS: Fix misaligned RLUnCompReadNormalWrite*
+ - Qt: Fix race condition with setting sample rate
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
