GBA Memory: Fix timing of DMAs

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Bugfixes:
  - GBA BIOS: Fix Sqrt sign
  - GBA BIOS: Fix misaligned RLUnCompReadNormalWrite*
  - Qt: Fix race condition with setting sample rate
+ - GBA Memory: Fix timing of DMAs
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
