--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - GBA BIOS: Fix misaligned RLUnCompReadNormalWrite*
  - Qt: Fix race condition with setting sample rate
  - GBA Memory: Fix timing of DMAs
+ - ARM7: Fix STRT/STRBT
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
