ARM7: Fix STRT/STRBT

--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,7 @@ Bugfixes:
  - Qt: Fix race condition with setting sample rate
  - GBA Memory: Fix timing of DMAs
  - GBA Memory: Fix DMAs triggering two cycles early
+ - ARM7: Fix STRT/STRBT
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
