ARM7: Implement undefined STRH/LDRH versions

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - GBA Memory: Fix timing of DMAs
  - GBA Memory: Fix DMAs triggering two cycles early
  - ARM7: Fix STRT/STRBT
+ - ARM7: Implement undefined STRH/LDRH versions
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
