--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@ Bugfixes:
  - GBA Memory: Fix DMAs triggering two cycles early
  - ARM7: Fix STRT/STRBT
  - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
+ - ARM7: Fix bank switching with LDR[B]T/STR[B]T
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
