--- a/CHANGES
+++ b/CHANGES
@@ -56,6 +56,7 @@ Misc:
  - GBA: Implement bad I/O register loading
  - GBA Memory: Add GBAView* functions for viewing memory directly without bus issues
  - Util: Add MutexTryLock
+ - Qt: Gray out "Skip BIOS intro" while "Use BIOS file" is unchecked
 
 0.3.1: (2015-10-24)
 Bugfixes:
