--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Bugfixes:
  - Qt: Fix crash when closing multiplayer windows
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
+ - Qt: Add mute option to menu
 
 0.3.1: (2015-10-24)
 Bugfixes:
