--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@ Misc:
  - GBA Memory: Add GBAView* functions for viewing memory directly without bus issues
  - Util: Add MutexTryLock
  - Qt: Gray out "Skip BIOS intro" while "Use BIOS file" is unchecked
+ - Qt: Add mute option to menu
 
 0.3.1: (2015-10-24)
 Bugfixes:
