--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,7 @@ Bugfixes:
  - ARM7: Fix STRT/STRBT
  - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
  - ARM7: Fix bank switching with LDR[B]T/STR[B]T
+ - Qt: Fix crash when closing multiplayer windows
 Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
 
