Qt: Fix crash when closing multiplayer windows

--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Bugfixes:
  - ARM7: Fix STRT/STRBT
  - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
  - ARM7: Fix bank switching with LDR[B]T/STR[B]T
+ - Qt: Fix crash when closing multiplayer windows
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
