--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@ Bugfixes:
  - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
  - ARM7: Fix bank switching with LDR[B]T/STR[B]T
  - Qt: Fix crash when closing multiplayer windows
+ - GBA Video: Fix OAM and palette initialization
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
