GBA Hardware: Fix GPIO on big endian

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Bugfixes:
  - ARM7: Fix sign of unaligned LDRSH
  - GBA: Fix warnings when creating and loading savestates
  - GBA Memory: Fix DMAs triggering two cycles early
+ - GBA Hardware: Fix GPIO on big endian
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
