3DS: Fix DISABLE_THREADING build

--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,7 @@ Misc:
  - Qt: Optimize log viewer
  - GBA RR: Starting from savestate now embeds the savegame
  - Libretro: Add install target for libretro core
+ - 3DS: Update to new ctrulib API
 
 0.3.2: (2015-12-16)
 Bugfixes:
