GBA Video: Implement naive cycle counting for sprite rendering

--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ Features:
  - OpenEmu core for OS X
  - Libretro: Settings for using BIOS and skipping intro
  - Libretro: Customizable idle loop removal
+ - Implemented cycle counting for sprite rendering
 Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - VFS: Fix VFileReadline and remove _vfdReadline
