ARM7: Fix decoding of some ARM ALU instructions with shifters

--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Bugfixes:
  - Libretro: Fix aspect ratio
  - Qt: Fix some potential crashes with the gamepad mapping
  - Debugger: Fix watchpoints in gdb
+ - ARM7: Fix decoding of some ARM ALU instructions with shifters
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
