Qt: Customizable paths for save games, save states, screenshots and patches

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ Features:
  - Implemented cycle counting for sprite rendering
  - Cleaner, unified settings window
  - Added a setting for pausing when the emulator is not in focus
+ - Customizable paths for save games, save states, screenshots and patches
 Bugfixes:
  - Util: Fix PowerPC PNG read/write pixel order
  - VFS: Fix VFileReadline and remove _vfdReadline
