GBA Cheats: Fix cheats setting the Action Replay version

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - Debugger: Fix watchpoints in gdb
  - ARM7: Fix decoding of some ARM ALU instructions with shifters
  - Qt: Fix keys being mapped incorrectly when loading configuration file
+ - GBA Cheats: Fix cheats setting the Action Replay version
 Misc:
  - Qt: Window size command line options are now supported
  - Qt: Increase usability of key mapper
