VFS: Fix reading 7z archives without rewinding first

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.4.1: (Future)
+Bugfixes:
+ - VFS: Fix reading 7z archives without rewinding first
+
 0.4.0: (2016-02-02)
 Features:
  - Officially supported ports for the Nintendo 3DS, Wii, and PlayStation Vita
