Qt: Fix sending gameStopped twice

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.5.0: (Future)
 Bugfixes:
  - VFS: Fix reading 7z archives without rewinding first
+ - Qt: Fix sending gameStopped twice
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
 
