--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Bugfixes:
  - VFS: Fix reading 7z archives without rewinding first
  - Qt: Fix sending gameStopped twice
  - Qt: Fix hang if audio sync is enabled and audio fails to initialize
+ - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
 
