--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Bugfixes:
  - Wii: Fix tilting direction
  - SDL: Fix joystick initialization on BS
  - SDL: Fix potential joystick crash in games with rumble
+ - SDL: Fix axes being mapped wrong
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
