--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Bugfixes:
  - SDL: Fix joystick initialization on BS
  - SDL: Fix potential joystick crash in games with rumble
  - SDL: Fix axes being mapped wrong
+ - Qt: Fix initial state of key mapping
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
